# rust-servo

./: .gitmodules  README.md
field-oriented/: Cargo.toml  README.md
field-oriented/src/: braking.rs  estimation.rs  filtering.rs  lib.rs  math.rs  pi_control.rs  sim.rs  test_utils.rs  types.rs
field-oriented/src/estimation/: arbitration.rs  hall_calibration.rs  hall_estimation.rs  mod.rs  motor_estimation.rs  ortega_nonlinear.rs  utils.rs
firmware/: Cargo.toml  README.md  build.rs  rust-toolchain.toml
firmware-core/: .gitignore  Cargo.toml  README.md
firmware-core/src/: constants.rs  control.rs  faults.rs  lib.rs  memory.rs  modes.rs  stamped.rs
firmware-core/src/app/: calibration.rs  control.rs  faults.rs  mod.rs  modes.rs  safe_strategy.rs
firmware-core/src/checks/: integrity.rs  mod.rs  qualify.rs
firmware/.cargo/: config.toml
firmware/dbc/: servo.dbc
firmware/src/: bsp.rs  calibration.rs  constants.rs  control.rs  lib.rs  main.rs  memory.rs  types.rs  utils.rs
firmware/src/boards/: mod.rs  spi_encoder.rs  zest1.rs
firmware/src/can/: mod.rs  periodic.rs  transport.rs
firmware/src/tasks/: can_rx.rs  can_tx.rs  control.rs  foc.rs  mod.rs
